libs/modkit-macros-tests/tests/ui/fail/module_name_ends_hyphen.stderr
error: module name must not end with a hyphen
 --> tests/ui/fail/module_name_ends_hyphen.rs:6:12
  |
6 |     name = "parser-",  // Should fail: ends with hyphen
  |            ^^^^^^^^^
